# sci

./: .env  .gitignore  Cargo.toml  README.md  config.yml
.github/workflows/: CI.yml
.sqlx/: query-1fa31db282644054d0a03747128540359ea8254a358b638a3d7691ca3fe829f9.json  query-647aeefda3cbb5a3761535b9921f3119107512536b2533e6e597007dc8176b36.json  query-a38022aa1bb9b31abb972decfb6d7a37a43f056573c8af4cf76ac8e773fa62ba.json
migrations/: 20250207130953_create_subscriptions_table.sql  20250210175434_create_newsletters_table.sql
scripts/: initialise_pg.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  newsletter_subscription.rs
tests/: endpoint_tests.rs
