[package]
name = "sci"
version = "0.1.0"
edition = "2021"
authors = ["Mark Gray <mark.gray@phasecurve.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sci"

[dependencies]
actix-web = "4"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.12"

