[package]
name = "sci"
version = "0.1.0"
edition = "2021"
authors = ["Mark Gray <mark.gray@phasecurve.com>"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sci"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.39", default-features = false, features=["clock"] }
config = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.13.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.12.12"

